--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -1,12 +1,8 @@
-name: Push Multi Arch Image
+name: Publish Release
 on:
-  workflow_run:
-    workflows: ["Build arm64 Image", "Build x86 Image"]
-    branches:
-    - master
-    - release-*
-    types:
-      - completed
+  workflow_dispatch:
+  schedule:
+  - cron: "20 16 * * *"
 
 concurrency:
   group: "${{ github.workflow }}-${{ github.ref }}"
@@ -14,18 +10,15 @@ concurrency:
 
 jobs:
   build:
-    name: Push multi arch images
+    name: Publish Images
     runs-on: ubuntu-22.04
     steps:
       - uses: actions/checkout@v3
-      - uses: docker/setup-buildx-action@v2
 
-      - name: Push
-        if: ${{ github.ref == 'refs/heads/master' || contains(github.ref, 'release') }}
+      - name: Publish
         env:
           DOCKER_USERNAME: ${{ secrets.DOCKER_USERNAME }}
           DOCKER_PASSWORD: ${{ secrets.DOCKER_PASSWORD }}
-          COMMIT: ${{ github.sha }}
           DOCKER_CLI_EXPERIMENTAL: enabled
         run: |
           TAG=$(cat VERSION)
