check whether go mod is tidy

--- a/.github/workflows/build-x86-image.yaml
+++ b/.github/workflows/build-x86-image.yaml
@@ -64,6 +64,7 @@ jobs:
       - name: Build
         run: |
           go mod tidy
+          git diff --exit-code
           make lint
           make image-kube-ovn
           make tar-kube-ovn
