--- a/kubeovn-helm/templates/kube-ovn-crd.yaml
+++ b/kubeovn-helm/templates/kube-ovn-crd.yaml
@@ -220,21 +220,21 @@ spec:
       served: true
       storage: true
       additionalPrinterColumns:
-        - name: V4IP
-          type: string
-          jsonPath: .spec.v4IpAddress
-        - name: V6IP
-          type: string
-          jsonPath: .spec.v6IpAddress
-        - name: Mac
-          type: string
-          jsonPath: .spec.macAddress
-        - name: Node
-          type: string
-          jsonPath: .spec.nodeName
-        - name: Subnet
-          type: string
-          jsonPath: .spec.subnet
+      - name: V4IP
+        type: string
+        jsonPath: .spec.v4IpAddress
+      - name: V6IP
+        type: string
+        jsonPath: .spec.v6IpAddress
+      - name: Mac
+        type: string
+        jsonPath: .spec.macAddress
+      - name: Node
+        type: string
+        jsonPath: .spec.nodeName
+      - name: Subnet
+        type: string
+        jsonPath: .spec.subnet
       schema:
         openAPIV3Schema:
           type: object
@@ -295,45 +295,45 @@ spec:
       subresources:
         status: {}
       additionalPrinterColumns:
-        - name: Provider
-          type: string
-          jsonPath: .spec.provider
-        - name: Vpc
-          type: string
-          jsonPath: .spec.vpc
-        - name: Protocol
-          type: string
-          jsonPath: .spec.protocol
-        - name: CIDR
-          type: string
-          jsonPath: .spec.cidrBlock
-        - name: Private
-          type: boolean
-          jsonPath: .spec.private
-        - name: NAT
-          type: boolean
-          jsonPath: .spec.natOutgoing
-        - name: Default
-          type: boolean
-          jsonPath: .spec.default
-        - name: GatewayType
-          type: string
-          jsonPath: .spec.gatewayType
-        - name: V4Used
-          type: number
-          jsonPath: .status.v4usingIPs
-        - name: V4Available
-          type: number
-          jsonPath: .status.v4availableIPs
-        - name: V6Used
-          type: number
-          jsonPath: .status.v6usingIPs
-        - name: V6Available
-          type: number
-          jsonPath: .status.v6availableIPs
-        - name: ExcludeIPs
-          type: string
-          jsonPath: .spec.excludeIps
+      - name: Provider
+        type: string
+        jsonPath: .spec.provider
+      - name: Vpc
+        type: string
+        jsonPath: .spec.vpc
+      - name: Protocol
+        type: string
+        jsonPath: .spec.protocol
+      - name: CIDR
+        type: string
+        jsonPath: .spec.cidrBlock
+      - name: Private
+        type: boolean
+        jsonPath: .spec.private
+      - name: NAT
+        type: boolean
+        jsonPath: .spec.natOutgoing
+      - name: Default
+        type: boolean
+        jsonPath: .spec.default
+      - name: GatewayType
+        type: string
+        jsonPath: .spec.gatewayType
+      - name: V4Used
+        type: number
+        jsonPath: .status.v4usingIPs
+      - name: V4Available
+        type: number
+        jsonPath: .status.v4availableIPs
+      - name: V6Used
+        type: number
+        jsonPath: .status.v6usingIPs
+      - name: V6Available
+        type: number
+        jsonPath: .status.v6availableIPs
+      - name: ExcludeIPs
+        type: string
+        jsonPath: .spec.excludeIps
       schema:
         openAPIV3Schema:
           type: object
@@ -478,12 +478,12 @@ spec:
                   items:
                     type: string
       additionalPrinterColumns:
-        - name: ID
-          type: string
-          jsonPath: .spec.id
-        - name: Provider
-          type: string
-          jsonPath: .spec.provider
+      - name: ID
+        type: string
+        jsonPath: .spec.id
+      - name: Provider
+        type: string
+        jsonPath: .spec.provider
   scope: Cluster
   names:
     plural: vlans
@@ -555,6 +555,10 @@ spec:
                   type: array
                   items:
                     type: string
+                notReadyNodes:
+                  type: array
+                  items:
+                    type: string
                 vlans:
                   type: array
                   items:
@@ -579,12 +583,12 @@ spec:
                       lastTransitionTime:
                         type: string
       additionalPrinterColumns:
-        - name: DefaultInterface
-          type: string
-          jsonPath: .spec.defaultInterface
-        - name: Ready
-          type: boolean
-          jsonPath: .status.ready
+      - name: DefaultInterface
+        type: string
+        jsonPath: .spec.defaultInterface
+      - name: Ready
+        type: boolean
+        jsonPath: .status.ready
   scope: Cluster
   names:
     plural: provider-networks
@@ -696,9 +700,9 @@ spec:
       served: true
       storage: true
       additionalPrinterColumns:
-        - name: PRIORITY
-          type: string
-          jsonPath: .spec.priority
+      - name: PRIORITY
+        type: string
+        jsonPath: .spec.priority
       schema:
         openAPIV3Schema:
           type: object
