--- a/yamls/crd.yaml
+++ b/yamls/crd.yaml
@@ -705,6 +705,9 @@ spec:
       - name: ExcludeIPs
         type: string
         jsonPath: .spec.excludeIps
+      - name: U2OInterconnectionIP
+        type: string
+        jsonPath: .status.u2oInterconnectionIP
       schema:
         openAPIV3Schema:
           type: object
@@ -725,6 +728,8 @@ spec:
                 dhcpV4OptionsUUID:
                   type: string
                 dhcpV6OptionsUUID:
+                  type: string
+                u2oInterconnectionIP:
                   type: string
                 conditions:
                   type: array
@@ -848,6 +853,8 @@ spec:
                           - allow
                           - drop
                           - reject
+                u2oInterconnection:
+                  type: boolean
   scope: Cluster
   names:
     plural: subnets
